# zyte-cli

./: README.md  main.py  pyproject.toml
tests/: test_cli.py
zyte_cli/: __init__.py  cli.py  client.py  config.py  errors.py  output.py
zyte_cli/commands/: cloud.py  extract.py  fetch.py  render.py  screenshot.py
